force-app/main/default/objects/Charge__c/fields/Charge_Id__c.field-meta.xml
<CustomField>
    <fullName>Charge_Id__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>Charge Id</label>
    <type>AutoNumber</type>
</CustomField>
 