force-app/main/default/objects/Charge__c/fields/Total_Time_Used__c.field-meta.xml
<CustomField>
    <fullName>Total_Time_Used__c</fullName>
    <formula>(End_Time__c  -  Start_Time__c)*24*60*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Time Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>
 